wxc/include/ewxw/wxc_glue.h



/* wxCalendarDateAttr */
TClassDef(wxCalendarDateAttr)
TClass(wxCalendarDateAttr) wxCalendarDateAttr_Create( void* _ctxt, void* _cbck, void* _cbrd, void* _fnt, int _brd );

TClass(wxCalendarDateAttr) wxCalendarDateAttr_CreateDefault(  );

void       wxCalendarDateAttr_Delete( TSelf(wxCalendarDateAttr) _obj );

void       wxCalendarDateAttr_GetBackgroundColour( TSelf(wxCalendarDateAttr) _obj, TClassRef(wxColour) _ref );

int        wxCalendarDateAttr_GetBorder( TSelf(wxCalendarDateAttr) _obj );

void       wxCalendarDateAttr_GetBorderColour( TSelf(wxCalendarDateAttr) _obj, TClassRef(wxColour) _ref );

void       wxCalendarDateAttr_GetFont( TSelf(wxCalendarDateAttr) _obj, TClassRef(wxFont) _ref );

void       wxCalendarDateAttr_GetTextColour( TSelf(wxCalendarDateAttr) _obj, TClassRef(wxColour) _ref );

TBool      wxCalendarDateAttr_HasBackgroundColour( TSelf(wxCalendarDateAttr) _obj );

TBool      wxCalendarDateAttr_HasBorder( TSelf(wxCalendarDateAttr) _obj );

TBool      wxCalendarDateAttr_HasBorderColour( TSelf(wxCalendarDateAttr) _obj );

TBool      wxCalendarDateAttr_HasFont( TSelf(wxCalendarDateAttr) _obj );

TBool      wxCalendarDateAttr_HasTextColour( TSelf(wxCalendarDateAttr) _obj );

TBool      wxCalendarDateAttr_IsHoliday( TSelf(wxCalendarDateAttr) _obj );

void       wxCalendarDateAttr_SetBackgroundColour( TSelf(wxCalendarDateAttr) _obj, TClass(wxColour) col );

void       wxCalendarDateAttr_SetBorder( TSelf(wxCalendarDateAttr) _obj, int border );

void       wxCalendarDateAttr_SetBorderColour( TSelf(wxCalendarDateAttr) _obj, TClass(wxColour) col );

void       wxCalendarDateAttr_SetFont( TSelf(wxCalendarDateAttr) _obj, TClass(wxFont) font );

void       wxCalendarDateAttr_SetHoliday( TSelf(wxCalendarDateAttr) _obj, int holiday );

void       wxCalendarDateAttr_SetTextColour( TSelf(wxCalendarDateAttr) _obj, TClass(wxColour) col );